<resources>
    <string name="app_name">UDISE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string-array name="excel_headers">
        <item>ac_year</item>
        <item>state_name</item>
        <item>district_code</item>
        <item>district_name</item>
        <item>blkcd</item>
        <item>blkname</item>
        <item>clucd</item>
        <item>cluname</item>
        <item>vilcd</item>
        <item>vilname</item>
        <item>schcd</item>
        <item>uschcd</item>
        <item>schname</item>
        <item>schstatus</item>
        <item>pancd</item>
        <item>panname</item>
        <item>habitcd</item>
        <item>habname</item>
        <item>municipalcd</item>
        <item>munname</item>
        <item>city</item>
        <item>cityname</item>
        <item>aconstcd</item>
        <item>constname</item>
        <item>edublkcd</item>
        <item>blkname</item>
        <item>schmgt_desc</item>
        <item>schmgt</item>
        <item>schcat</item>
        <item>rururb</item>
        <item>schcat_desc</item>
        <item>rururb</item>
        <item>schtype</item>
        <item>relminority_yn</item>
        <item>relminority_type</item>
        <item>pincd</item>
        <item>disthq</item>
        <item>distcrc</item>
        <item>estdyear</item>
        <item>lowclass</item>
        <item>highclass</item>
        <item>ppsec_yn</item>
        <item>ppstudent</item>
        <item>ppteacher</item>
        <item>workdays</item>
        <item>schres_yn</item>
        <item>resitype</item>
        <item>schshi_yn</item>
        <item>noinspect</item>
        <item>visitscrc</item>
        <item>visitsbrc</item>
        <item>conti_r</item>
        <item>conti_e</item>
        <item>tlm_r</item>
        <item>tlm_e</item>
        <item>funds_e</item>
        <item>funds_r</item>
        <item>osrc_e</item>
        <item>osrc_r</item>
        <item>tchsan</item>
        <item>tchpos</item>
        <item>parapos</item>
        <item>ntpos</item>
        <item>medinstr1</item>
        <item>medinstr2</item>
        <item>medinstr3</item>
        <item>medinstr4</item>
        <item>supvar1</item>
        <item>supvar2</item>
        <item>supvar3</item>
        <item>supvar4</item>
        <item>supvar5</item>
        <item>schmntcgrant_r</item>
        <item>schmntcgrant_e</item>
        <item>tle_r</item>
        <item>tle_e</item>
        <item>postaladdr</item>
        <item>stdcode1</item>
        <item>phone1</item>
        <item>mobile1</item>
        <item>stdcode2</item>
        <item>phone2</item>
        <item>mobile2</item>
        <item>email</item>
        <item>website</item>
        <item>parasanct_ele</item>
        <item>tchsanct_sec</item>
        <item>tchposn_sec</item>
        <item>parasanct_sec</item>
        <item>paraposn_sec</item>
        <item>tchsanct_hsec</item>
        <item>tchposn_hsec</item>
        <item>parasanct_hsec</item>
        <item>paraposn_hsec</item>
        <item>tchregu_upr</item>
        <item>tchpara_upr</item>
        <item>tchpart_upr</item>
        <item>tchsanct_pr</item>
        <item>parasanct_pr</item>
        <item>ntsanct_sec</item>
        <item>ntposn_sec</item>
        <item>ntsanct_hsec</item>
        <item>ntposn_hsec</item>
        <item>anganwadi_yn</item>
        <item>anganwadi_stu</item>
        <item>anganwadi_tch</item>
        <item>latdeg</item>
        <item>latmin</item>
        <item>latsec</item>
        <item>londeg</item>
        <item>lonmin</item>
        <item>lonsec</item>
        <item>approachbyroad</item>
        <item>yearrecog</item>
        <item>yearupgrd</item>
        <item>cwsnsch_yn</item>
        <item>visitsrtcwsn</item>
        <item>distp</item>
        <item>distu</item>
        <item>dists</item>
        <item>disth</item>
        <item>meds1</item>
        <item>meds2</item>
        <item>meds3</item>
        <item>meds4</item>
        <item>medh1</item>
        <item>medh2</item>
        <item>medh3</item>
        <item>medh4</item>
        <item>boardsec</item>
        <item>boardhsec</item>
        <item>yearrecogs</item>
        <item>yearrecogh</item>
        <item>yearupgrds</item>
        <item>yearupgrdh</item>
        <item>schresupr_yn</item>
        <item>schressec_yn</item>
        <item>schreshsec_yn</item>
        <item>pconstcd</item>
        <item>cpp_sec</item>
        <item>c1_sec</item>
        <item>c2_sec</item>
        <item>c3_sec</item>
        <item>c4_sec</item>
        <item>c5_sec</item>
        <item>c6_sec</item>
        <item>c7_sec</item>
        <item>c8_sec</item>
        <item>c9_sec</item>
        <item>c10_sec</item>
        <item>c11_sec</item>
        <item>c12_sec</item>
        <item>boardingp_yn</item>
        <item>boardingp_g</item>
        <item>boardingp_b</item>
        <item>boardingu_yn</item>
        <item>boardingu_g</item>
        <item>boardingu_b</item>
        <item>boardings_yn</item>
        <item>boardings_g</item>
        <item>boardings_b</item>
        <item>boardingh_yn</item>
        <item>boardingh_g</item>
        <item>boardingh_b</item>
        <item>boardsec_no</item>
        <item>boardsec_oth</item>
        <item>boardhsec_no</item>
        <item>boardhsec_oth</item>
        <item>mschcd</item>
        <item>tchregu_tot</item>
        <item>tchcont_tot</item>
        <item>tchpart_tot</item>
        <item>cpp_b</item>
        <item>cpp_g</item>
        <item>c1_b</item>
        <item>c1_g</item>
        <item>c2_b</item>
        <item>c2_g</item>
        <item>c3_b</item>
        <item>c3_g</item>
        <item>c4_b</item>
        <item>c4_g</item>
        <item>c5_b</item>
        <item>c5_g</item>
        <item>c6_b</item>
        <item>c6_g</item>
        <item>c7_b</item>
        <item>c7_g</item>
        <item>c8_b</item>
        <item>c8_g</item>
        <item>c9_b</item>
        <item>c9_g</item>
        <item>c10_b</item>
        <item>c10_g</item>
        <item>c11_b</item>
        <item>c11_g</item>
        <item>c12_b</item>
        <item>c12_g</item>
        <item>tch_m</item>
        <item>tch_f</item>
        <item>tch_t</item>
        <item>tchpri</item>
        <item>tchupr</item>
        <item>tchsec</item>
        <item>tchhsec</item>
        <item>tchnr_clstaught</item>
        <item>tchcwsntrnd</item>
        <item>tchdisable</item>
        <item>tchregu</item>
        <item>tchcont</item>
        <item>tchpart</item>
    </string-array>
    <string name="import_udise_excel_file">Import UDISE Excel File</string>
    <string name="you_have_not_imported_udise_data_yet">You have not imported UDISE data yet! Please import UDISE data from excel file.</string>
    <string name="choose_excel_file">CHOOSE EXCEL FILE</string>
    <string name="cancel">CANCEL</string>
    <string name="enrolment_reports">ENROLMENT REPORTS</string>
    <string name="enrolment_summary">Enrolment Summary</string>
    <string name="school_wise_enrolment_list">School-wise Enrolment List</string>
    <string name="constituency_wise_enrolment">Constituency-wise Enrolment</string>
    <string name="compare_enrolment">Compare Enrolment</string>
    <string name="enrolment_based_school_list">Enrolment Based School List</string>
    <string name="school_reports">SCHOOL REPORTS</string>
    <string name="number_of_schools">Number of Schools</string>
    <string name="list_of_schools">List of Schools</string>
    <string name="rented_and_owned_schools">Rented and Owned Schools</string>
    <string name="school_contact_info">School Contact Info</string>
    <string name="find_school">Find School</string>
    <string name="comparative_number_of_schools">Comparative Number of Schools</string>
</resources>