<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textview_import_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/import_udise_excel_file"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/import_udise_excel_file" />

    <ProgressBar
        android:id="@+id/progressBar_dialog_import"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_import_dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textview_import_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar_dialog_import"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/you_have_not_imported_udise_data_yet"
        tools:text="@string/you_have_not_imported_udise_data_yet"/>

    <TextView
        android:id="@+id/action_import_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textview_import_dialog_message"
        android:layout_below="@+id/textview_import_dialog_message"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="25dp"
        android:text="@string/choose_excel_file"
        android:textColor="@color/colorAccent"
        android:clickable="true"
        android:textStyle="bold"
        android:focusable="true" />

    <TextView
        android:id="@+id/action_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/action_import_data"
        android:layout_alignBottom="@+id/action_import_data"
        android:layout_alignStart="@+id/textview_import_dialog_message"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:clickable="true"
        android:textStyle="bold"
        android:focusable="true" />
</RelativeLayout>